PB-3692 Fix misc sidebar alignment issues

--- a/src/css/themes/default/api_main.css
+++ b/src/css/themes/default/api_main.css
@@ -6897,21 +6897,71 @@ input[type="search"]::-webkit-search-cancel-button {
   z-index: 401;
   border: 0;
 }
-.panel.aside .sidebar-section .accordion-content span {
+.panel.aside .detailed-information li {
+  /*
+     * For IE 6/7 only
+     * Include this rule to trigger hasLayout and contain floats.
+     */
+  /*
+     * Clearfix: contain floats
+     *
+     * For modern browsers
+     * 1. The space content is one way to avoid an Opera bug when the
+     *	`contenteditable` attribute is included anywhere else in the document.
+     *	Otherwise it causes space to appear at the top and bottom of elements
+     *	that receive the `clearfix` class.
+     * 2. The use of `table` rather than `block` is only necessary if using
+     *	`:before` to contain the top-margins of child elements.
+     */
+  /*
+     * For IE 6/7 only
+     * Include this rule to trigger hasLayout and contain floats.
+     */
+  zoom: 1;
+  /*
+     * Clearfix: contain floats
+     *
+     * For modern browsers
+     * 1. The space content is one way to avoid an Opera bug when the
+     *	`contenteditable` attribute is included anywhere else in the document.
+     *	Otherwise it causes space to appear at the top and bottom of elements
+     *	that receive the `clearfix` class.
+     * 2. The use of `table` rather than `block` is only necessary if using
+     *	`:before` to contain the top-margins of child elements.
+     */
+  padding-bottom: 0.25em;
+}
+.panel.aside .detailed-information li:before,
+.panel.aside .detailed-information li:after {
+  content: "";
+  display: table;
+}
+.panel.aside .detailed-information li:after {
+  clear: both;
+}
+.panel.aside .detailed-information li:before,
+.panel.aside .detailed-information li:after {
+  content: "";
+  display: table;
+}
+.panel.aside .detailed-information li:after {
+  clear: both;
+}
+.panel.aside .detailed-information li span {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
   -ms-text-overflow: ellipsis;
 }
-.panel.aside .sidebar-section .accordion-content .label {
+.panel.aside .detailed-information li .label {
   width: 30%;
   display: inline-block;
   margin-right: 10%;
   float: left;
   height: 1.8em;
 }
-.panel.aside .sidebar-section .accordion-content .value {
+.panel.aside .detailed-information li .value {
   width: 60%;
   display: inline-block;
   float: left;
@@ -6939,6 +6989,78 @@ input[type="search"]::-webkit-search-cancel-button {
   min-height: 30em;
   line-height: normal;
   margin-top: 0.8em;
+  width: 100%;
+  box-sizing: border-box;
+}
+.panel.aside .key-information li {
+  /*
+     * For IE 6/7 only
+     * Include this rule to trigger hasLayout and contain floats.
+     */
+  /*
+     * Clearfix: contain floats
+     *
+     * For modern browsers
+     * 1. The space content is one way to avoid an Opera bug when the
+     *	`contenteditable` attribute is included anywhere else in the document.
+     *	Otherwise it causes space to appear at the top and bottom of elements
+     *	that receive the `clearfix` class.
+     * 2. The use of `table` rather than `block` is only necessary if using
+     *	`:before` to contain the top-margins of child elements.
+     */
+  /*
+     * For IE 6/7 only
+     * Include this rule to trigger hasLayout and contain floats.
+     */
+  zoom: 1;
+  /*
+     * Clearfix: contain floats
+     *
+     * For modern browsers
+     * 1. The space content is one way to avoid an Opera bug when the
+     *	`contenteditable` attribute is included anywhere else in the document.
+     *	Otherwise it causes space to appear at the top and bottom of elements
+     *	that receive the `clearfix` class.
+     * 2. The use of `table` rather than `block` is only necessary if using
+     *	`:before` to contain the top-margins of child elements.
+     */
+  padding-bottom: 0.25em;
+}
+.panel.aside .key-information li:before,
+.panel.aside .key-information li:after {
+  content: "";
+  display: table;
+}
+.panel.aside .key-information li:after {
+  clear: both;
+}
+.panel.aside .key-information li:before,
+.panel.aside .key-information li:after {
+  content: "";
+  display: table;
+}
+.panel.aside .key-information li:after {
+  clear: both;
+}
+.panel.aside .key-information li span {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  -ms-text-overflow: ellipsis;
+}
+.panel.aside .key-information li .label {
+  width: 30%;
+  display: inline-block;
+  margin-right: 10%;
+  float: left;
+  height: 1.8em;
+}
+.panel.aside .key-information li .value {
+  width: 60%;
+  display: inline-block;
+  float: left;
+  height: 1.8em;
 }
 .panel.aside .form-content {
   margin: 0 0 0.5em 0;
